fix: put gaps between items, fix item dimensions

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -19,6 +19,14 @@ img {
 
 .images {
   display: flex;
+  gap: 52px;
+}
+
+.image {
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* do not edit this footer */
